# CAPCF

./: API_SCHEMAS.md  README.md  REQUIREMENTS.md  SPECIFICATION.md
.github/: copilot-instructions.md
cognitive_digital_interface_layer/: go.mod  main.go
cross_domain_integration_layer/: Cargo.toml
cross_domain_integration_layer/src/: impl.rs  lib.rs  main.rs
governance_consent_layer/: Cargo.toml
governance_consent_layer/src/: impl.rs  lib.rs  main.rs
intrusion_surface_boundary_layer/python_ml/: main.py
intrusion_surface_boundary_layer/rust_part/: Cargo.toml
intrusion_surface_boundary_layer/rust_part/src/: impl.rs  lib.rs  main.rs
provenance_layer/: Cargo.toml
provenance_layer/src/: lib.rs  main.rs  provenance_impl.rs
shared/: schemas.json
